--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,13 +3,23 @@
     <string name="menu_calc">Calculation</string>
     <string name="menu_info">Information</string>
     <string name="menu_about">About app</string>
+
+
+    <!--    Fragment with calorie calculations-->
     <string name="fragment_calc_header">Cats daily calories calculator</string>
     <string name="fragment_calc_cat_weight">Cat weight (in kg):</string>
     <string name="fragment_calc_cat_weight_edittext">Enter the value</string>
     <string name="fragment_calc_coefficient">Select the appropriate coefficient (K):</string>
     <string name="fragment_calc_formula_intro">Calculate by the formula:</string>
     <string name="fragment_calc_formula">K × (30 × body weight + 70)</string>
+    <string name="fragment_calc_error">Field mustn\'t be empty!</string>
     <string name="fragment_calc_result_btn">Result</string>
+    <string name="fragment_calc_result_info">"Result: "</string>
+    <string name="fragment_calc_result_kcal">" kcal/day"</string>
+
+
+
+    <!--    Data transfer to a drop-down list with coefficients-->
     <string name="fragment_calc_vzr">Adult (1.4)</string>
     <string name="fragment_calc_akt_vzr">Active adult (1.6)</string>
     <string name="fragment_calc_snizhenie">Weight loss (0.8)</string>
@@ -19,4 +29,5 @@
     <string name="fragment_calc_nabor">Weight gain (1.2)</string>
     <string name="fragment_calc_berem">Pregnancy (1.7)</string>
     <string name="fragment_calc_rost">Growth (1.3)</string>
+
 </resources>
