--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -29,4 +29,20 @@
     <string name="fragment_calc_nabor">Набор веса (1.2)</string>
     <string name="fragment_calc_berem">Беременность (1.7)</string>
     <string name="fragment_calc_rost">Рост (1.3)</string>
+
+
+<!--    Текст в информационном фрагменте-->
+    <string name="fragment_info_h1">Как рассчитать суточную калорийность рациона кошки</string>
+    <string name="fragment_info_2">Кошки — любопытные и подвижные хищники. Для их жизнедеятельности необходимо много энергии. Поэтому для владельца важно так рассчитатькалорийность пищи, чтобы питомцу хватало калорий для жизнедеятельности, и не оставалось их излишек, которые будут откладываться в боках и пузике питомца.</string>
+    <string name="fragment_info_3">Факторы, влияющие на калорийную потребность:\n
+1. Состояние здоровья питомца, кошки, страдающие заболеваниями мочеполовой системы или желудочно-кишечного тракта, едят меньше или отказываются от еды совсем;\n
+2. Смена рациона: переводить на другой корм нужно постепенно, подмешивая небольшое его количество в старую еду;\n
+3. Возраст: котятам, кормящим и беременным кошкам нужно в 2 раза больше калорий, а пожилым питомцам — меньше;\n
+4. Подвижность животного: гуляющая кошка ест больше, чем неактивный домашний кот;\n
+5. Пол и порода кошки (есть виды кошек, склонных к полноте).
+    </string>
+    <string name="fragment_info_4_formulaintro">Для кошек и собак с массой более 2 кг величина базовой и метаболической энергии определяется по следующим формулам:</string>
+    <string name="fragment_info_4_formulabaz">Базовая энергия (ккал/день) = 30 × массу тела (m) + 70</string>
+    <string name="fragment_info_4_formulamet">Метаболическая энергия (ккал/день) = K × (30 х массу тела + 70)</string>
+    <string name="fragment_info_4_koef">K ‒ коэффициент по табличке 2.</string>
 </resources>
