--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -33,17 +33,32 @@
 
     <!--    Текст в информационном фрагменте-->
     <string name="fragment_info_h1">Как рассчитать суточную калорийность рациона кошки</string>
-    <string name="fragment_info_2">Кошки — любопытные и подвижные хищники. Для их жизнедеятельности необходимо много энергии. Поэтому для владельца важно калорийность пищи рассчитать так, чтобы питомцу хватало калорий для жизнедеятельности, и не оставался их излишек.</string>
+    <string name="fragment_info_2">Кошки — любопытные и подвижные хищники. Для их жизнедеятельности необходимо много энергии. Поэтому для владельца важно так рассчитатькалорийность пищи, чтобы питомцу хватало калорий для жизнедеятельности, и не оставалось их излишек, которые будут откладываться в боках и пузике питомца.</string>
     <string name="fragment_info_3">Факторы, влияющие на калорийную потребность:\n
 1. Состояние здоровья питомца, кошки, страдающие заболеваниями мочеполовой системы или желудочно-кишечного тракта, едят меньше или отказываются от еды совсем;\n
 2. Смена рациона: переводить на другой корм нужно постепенно, подмешивая небольшое его количество в старую еду;\n
 3. Возраст: котятам, кормящим и беременным кошкам нужно в 2 раза больше калорий, а пожилым питомцам — меньше;\n
 4. Подвижность животного: гуляющая кошка ест больше, чем неактивный домашний кот;\n
-5. Пол и порода кошки (есть виды кошек, склонных к полноте).
-    </string>
+5. Пол и порода кошки (есть виды кошек, склонных к полноте).</string>
     <string name="fragment_info_4_formulaintro">Для кошек и собак с массой более 2 кг величина базовой и метаболической энергии определяется по следующим формулам:</string>
     <string name="fragment_info_4_formulabaz">Базовая энергия (ккал/день) = 30 × массу тела (m) + 70</string>
     <string name="fragment_info_4_formulamet">Метаболическая энергия (ккал/день) = K × (30 х массу тела + 70)</string>
-    <string name="fragment_info_4_koef">K ‒ коэффициент по табличке 2.</string>
+    <string name="fragment_info_4_koef">K ‒ коэффициент по табличке снизу.</string>
+    <string name="fragment_info_5">Отвечая на вопрос "Зачем кота мучить диетами", напомним вам, что ожирение, к которому может привести бесконтрольное поедание кошачьего корма животными, здоровья не прибавит. Так что все зависит только от вас!.</string>
+
+
+
+    <!--    Таблица в информационном фрагменте-->
+    <string name="fragment_info_table_left">Стадия жизни кошки</string>
+    <string name="fragment_info_table_right">Множитель</string>
+    <string name="fragment_info_table_kastr">Взрослый кастрированный (1.2)</string>
+    <string name="fragment_info_table_vzr">Взрослый (1.4)</string>
+    <string name="fragment_info_table_akt_vzr">Активный взрослый (1.6)</string>
+    <string name="fragment_info_table_pereedanie">Переедание (1.0)</string>
+    <string name="fragment_info_table_snizhenie">Снижение веса (0.8)</string>
+    <string name="fragment_info_table_bolezn">Уход при болезни (1.0)</string>
+    <string name="fragment_info_table_nabor">Набор веса (1.2)</string>
+    <string name="fragment_info_table_berem">Беременность (1.7)</string>
+    <string name="fragment_info_table_rost">Рост (1.3)</string>
 
 </resources>
