--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,6 +3,8 @@
     <string name="menu_calc">Calculation</string>
     <string name="menu_info">Information</string>
     <string name="menu_about">About app</string>
+    <string name="version_app">"Application version: "</string>
+    <string name="developed"><b>Developed by WiQuert</b></string>
 
 
     <!--    Fragment with calorie calculations-->
@@ -31,34 +33,34 @@
     <string name="fragment_calc_rost">Growth (1.3)</string>
 
 
-    <!--    Текст в информационном фрагменте-->
-    <string name="fragment_info_h1">Как рассчитать суточную калорийность рациона кошки</string>
-    <string name="fragment_info_2">Кошки — любопытные и подвижные хищники. Для их жизнедеятельности необходимо много энергии. Поэтому для владельца важно так рассчитатькалорийность пищи, чтобы питомцу хватало калорий для жизнедеятельности, и не оставалось их излишек, которые будут откладываться в боках и пузике питомца.</string>
-    <string name="fragment_info_3">Факторы, влияющие на калорийную потребность:\n
-1. Состояние здоровья питомца, кошки, страдающие заболеваниями мочеполовой системы или желудочно-кишечного тракта, едят меньше или отказываются от еды совсем;\n
-2. Смена рациона: переводить на другой корм нужно постепенно, подмешивая небольшое его количество в старую еду;\n
-3. Возраст: котятам, кормящим и беременным кошкам нужно в 2 раза больше калорий, а пожилым питомцам — меньше;\n
-4. Подвижность животного: гуляющая кошка ест больше, чем неактивный домашний кот;\n
-5. Пол и порода кошки (есть виды кошек, склонных к полноте).</string>
-    <string name="fragment_info_4_formulaintro">Для кошек и собак с массой более 2 кг величина базовой и метаболической энергии определяется по следующим формулам:</string>
-    <string name="fragment_info_4_formulabaz">Базовая энергия (ккал/день) = 30 × массу тела (m) + 70</string>
-    <string name="fragment_info_4_formulamet">Метаболическая энергия (ккал/день) = K × (30 х массу тела + 70)</string>
-    <string name="fragment_info_4_koef">K ‒ коэффициент по табличке снизу.</string>
-    <string name="fragment_info_5">Отвечая на вопрос "Зачем кота мучить диетами", напомним вам, что ожирение, к которому может привести бесконтрольное поедание кошачьего корма животными, здоровья не прибавит. Так что все зависит только от вас!.</string>
+    <!--    Text in an information fragment-->
+    <string name="fragment_info_h1">How to calculate the daily caloric value of a cat\'s diet</string>
+    <string name="fragment_info_2">Cats are curious and agile predators. They require a lot of energy for their vital activity. Therefore, it is important for the owner to calculate the caloric content of the food so that the pet has enough calories for its vital activity, and there is no excess calories left, which will be deposited in the sides and belly of the pet.</string>
+    <string name="fragment_info_3">Factors affecting caloric requirements:\n
+1. The pet\'s health condition, cats suffering from diseases of the genitourinary system or gastrointestinal tract, eat less or refuse to eat at all;\n
+2. Change of diet: transfer to another food should be done gradually, mixing a small amount of it into the old food;\n
+3. Age: kittens, lactating and pregnant cats need twice as many calories, and older cats need fewer calories;\n
+4. Animal mobility: a walking cat eats more than an inactive house cat;\n
+5. Sex and breed of cat (there are types of cats prone to obesity).</string>
+    <string name="fragment_info_4_formulaintro">For cats and dogs weighing more than 2 kg, the basal and metabolic energy values are determined using the following formulas:</string>
+    <string name="fragment_info_4_formulabaz">Base energy (kcal/day) = 30 × body mass (m) + 70</string>
+    <string name="fragment_info_4_formulamet">Metabolic energy (kcal/day) = K × (30 x body weight + 70)</string>
+    <string name="fragment_info_4_koef">K - coefficient according to the table below.</string>
+    <string name="fragment_info_5">Answering the question "Why should you torture your cat with diet", we remind you that obesity, to which uncontrolled eating of cat food by animals can lead, will not add to your health. So it\'s up to you!</string>
 
 
 
-    <!--    Таблица в информационном фрагменте-->
-    <string name="fragment_info_table_left">Стадия жизни кошки</string>
-    <string name="fragment_info_table_right">Множитель</string>
-    <string name="fragment_info_table_kastr">Взрослый кастрированный (1.2)</string>
-    <string name="fragment_info_table_vzr">Взрослый (1.4)</string>
-    <string name="fragment_info_table_akt_vzr">Активный взрослый (1.6)</string>
-    <string name="fragment_info_table_pereedanie">Переедание (1.0)</string>
-    <string name="fragment_info_table_snizhenie">Снижение веса (0.8)</string>
-    <string name="fragment_info_table_bolezn">Уход при болезни (1.0)</string>
-    <string name="fragment_info_table_nabor">Набор веса (1.2)</string>
-    <string name="fragment_info_table_berem">Беременность (1.7)</string>
-    <string name="fragment_info_table_rost">Рост (1.3)</string>
+    <!--    Table in an information fragment-->
+    <string name="fragment_info_table_left">A cat\'s life stage</string>
+    <string name="fragment_info_table_right">Multiplier</string>
+    <string name="fragment_info_table_kastr">Adult neutered (1.2)</string>
+    <string name="fragment_info_table_vzr">Adult (1.4)</string>
+    <string name="fragment_info_table_akt_vzr">Active neutered (1.6)</string>
+    <string name="fragment_info_table_pereedanie">Sickness care (1.0)</string>
+    <string name="fragment_info_table_snizhenie">Weight loss (0.8)</string>
+    <string name="fragment_info_table_bolezn">Sickness care (1.0)</string>
+    <string name="fragment_info_table_nabor">Weight gain (1.2)</string>
+    <string name="fragment_info_table_berem">Pregnancy (1.7)</string>
+    <string name="fragment_info_table_rost">Growth (1.3)</string>
 
 </resources>
